--- a/COMMO.Server.Standalone/COMMO.Server.Standalone.csproj
+++ b/COMMO.Server.Standalone/COMMO.Server.Standalone.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <DocumentationFile>bin\Debug\netcoreapp2.1\COMMO.Server.Standalone.xml</DocumentationFile>
+    <DocumentationFile>bin\Release\netcoreapp2.1\COMMO.Server.Standalone.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="stylecop.json" />
