--- a/COMMO.Scheduling.Tests/COMMO.Scheduling.Tests.csproj
+++ b/COMMO.Scheduling.Tests/COMMO.Scheduling.Tests.csproj
@@ -11,7 +11,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>bin\Debug\netcoreapp2.1\COMMO.Scheduling.Tests.xml</DocumentationFile>
+    <DocumentationFile>bin\Release\netcoreapp2.1\COMMO.Scheduling.Tests.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
