--- a/COMMO.Scheduling/COMMO.Scheduling.csproj
+++ b/COMMO.Scheduling/COMMO.Scheduling.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>bin\Debug\netcoreapp2.1\COMMO.Scheduling.xml</DocumentationFile>
+    <DocumentationFile>bin\Release\netcoreapp2.1\COMMO.Scheduling.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
