--- a/COMMO.Server.Utils/COMMO.Server.Utils.csproj
+++ b/COMMO.Server.Utils/COMMO.Server.Utils.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>bin\Debug\netcoreapp2.1\COMMO.Server.Utils.xml</DocumentationFile>
+    <DocumentationFile>bin\Release\netcoreapp2.1\COMMO.Server.Utils.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
