--- a/COMMO.Server/COMMO.Server.csproj
+++ b/COMMO.Server/COMMO.Server.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>bin\Debug\netcoreapp2.1\OpenTibia.Server.xml</DocumentationFile>
+    <DocumentationFile>bin\Release\netcoreapp2.1\OpenTibia.Server.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
