--- a/COMMO.TestUtils/COMMO.TestUtils.csproj
+++ b/COMMO.TestUtils/COMMO.TestUtils.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>bin\Debug\netcoreapp2.1\COMMO.TestUtils.xml</DocumentationFile>
+    <DocumentationFile>bin\Release\netcoreapp2.1\COMMO.TestUtils.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
