--- a/src/COMMO.Server.Utils/COMMO.Utilities.csproj
+++ b/src/COMMO.Server.Utils/COMMO.Utilities.csproj
@@ -6,6 +6,10 @@
     <Configurations>Debug;Release</Configurations>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <LangVersion>latest</LangVersion>
+  </PropertyGroup>
+
   <ItemGroup>
     <Compile Remove="BinaryHeap.cs" />
     <Compile Remove="BytePair.cs" />
