Unfucked the paths.
...

Jesus...

--- a/src/COMMO.OTB/COMMO.OTB.csproj
+++ b/src/COMMO.OTB/COMMO.OTB.csproj
@@ -11,7 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\COMMO.Server.Utils\COMMO.Utilities.csproj" />
+    <ProjectReference Include="..\COMMO.Utilities\COMMO.Utilities.csproj" />
   </ItemGroup>
 
 </Project>
