--- a/src/COMMO.Scheduling/COMMO.Scheduling.csproj
+++ b/src/COMMO.Scheduling/COMMO.Scheduling.csproj
@@ -12,7 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\COMMO.Scheduling.Contracts\COMMO.Scheduling.Contracts.csproj" />
-    <ProjectReference Include="..\COMMO.Server.Utils\COMMO.Utilities.csproj" />
+    <ProjectReference Include="..\COMMO.Utilities\COMMO.Utilities.csproj" />
   </ItemGroup>
 
 </Project>
