--- a/src/COMMO.Communications/COMMO.Communications.csproj
+++ b/src/COMMO.Communications/COMMO.Communications.csproj
@@ -10,7 +10,7 @@
     <ProjectReference Include="..\COMMO.Configuration\COMMO.Configuration.csproj" />
     <ProjectReference Include="..\COMMO.Data\COMMO.Data.csproj" />
     <ProjectReference Include="..\COMMO.Server.Data\COMMO.Server.Data.csproj" />
-    <ProjectReference Include="..\COMMO.Server.Utils\COMMO.Utilities.csproj" />
+    <ProjectReference Include="..\COMMO.Utilities\COMMO.Utilities.csproj" />
   </ItemGroup>
 
 </Project>
