--- a/src/COMMO.Utilities/COMMO.Utilities.csproj
+++ b/src/COMMO.Utilities/COMMO.Utilities.csproj
@@ -10,6 +10,10 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <LangVersion>latest</LangVersion>
+  </PropertyGroup>
+
   <ItemGroup>
     <Compile Remove="BinaryHeap.cs" />
     <Compile Remove="BytePair.cs" />
