--- a/src/COMMO.OTB.Tests/COMMO.OTB.Tests.csproj
+++ b/src/COMMO.OTB.Tests/COMMO.OTB.Tests.csproj
@@ -19,4 +19,8 @@
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\COMMO.OTB\COMMO.OTB.csproj" />
+  </ItemGroup>
+
 </Project>
