--- a/src/COMMO.Server/COMMO.Server.csproj
+++ b/src/COMMO.Server/COMMO.Server.csproj
@@ -430,6 +430,7 @@
     <ProjectReference Include="..\COMMO.Configuration\COMMO.Configuration.csproj" />
     <ProjectReference Include="..\COMMO.Data.Contracts\COMMO.Data.Contracts.csproj" />
     <ProjectReference Include="..\COMMO.Data\COMMO.Data.csproj" />
+    <ProjectReference Include="..\COMMO.OTB\COMMO.OTB.csproj" />
     <ProjectReference Include="..\COMMO.Scheduling.Contracts\COMMO.Scheduling.Contracts.csproj" />
     <ProjectReference Include="..\COMMO.Scheduling\COMMO.Scheduling.csproj" />
     <ProjectReference Include="..\COMMO.Server.Data\COMMO.Server.Data.csproj" />
