Visual Studio Code under linux related changes.

--- a/src/COMMO.Server/COMMO.Server.csproj
+++ b/src/COMMO.Server/COMMO.Server.csproj
@@ -6,6 +6,11 @@
     <Configurations>Debug;Release</Configurations>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <!-- This is for Visual Studio Code understand the project version, ortherwise it will use c# 7.0-->
+    <LangVersion>latest</LangVersion>
+  </PropertyGroup>
+
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
