Keep map out of repo

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,7 @@ Thumbs.db
 # Visual Code Studio file #
 ###########################
 .vscode
+
+# Map file #
+############
+src/COMMO.Server/Data/map
