--- a/src/COMMO.Server/COMMO.Server.csproj
+++ b/src/COMMO.Server/COMMO.Server.csproj
@@ -26,6 +26,9 @@
     <None Remove="Data\map\COMMO-house.xml" />
     <None Remove="Data\map\COMMO-spawn.xml" />
     <None Remove="Data\map\COMMO.otbm" />
+    <None Remove="Data\map\teste-house.xml" />
+    <None Remove="Data\map\teste-spawn.xml" />
+    <None Remove="Data\map\teste.otbm" />
     <None Remove="Data\map\world-house.xml" />
     <None Remove="Data\map\world-spawn.xml" />
     <None Remove="Data\map\world.otbm" />
@@ -36,12 +39,9 @@
     <EmbeddedResource Include="Data\dat\circles.dat" />
     <EmbeddedResource Include="Data\items\items.otb" />
     <EmbeddedResource Include="Data\items\items.xml" />
-    <EmbeddedResource Include="Data\map\COMMO-house.xml" />
-    <EmbeddedResource Include="Data\map\COMMO-spawn.xml" />
-    <EmbeddedResource Include="Data\map\COMMO.otbm" />
-    <EmbeddedResource Include="Data\map\world-house.xml" />
-    <EmbeddedResource Include="Data\map\world-spawn.xml" />
-    <EmbeddedResource Include="Data\map\world.otbm" />
+    <EmbeddedResource Include="Data\map\teste-house.xml" />
+    <EmbeddedResource Include="Data\map\teste-spawn.xml" />
+    <EmbeddedResource Include="Data\map\teste.otbm" />
   </ItemGroup>
 
   <ItemGroup>
