--- a/src/COMMO.Server/COMMO.Server.csproj
+++ b/src/COMMO.Server/COMMO.Server.csproj
@@ -39,6 +39,9 @@
     <EmbeddedResource Include="Data\dat\circles.dat" />
     <EmbeddedResource Include="Data\items\items.otb" />
     <EmbeddedResource Include="Data\items\items.xml" />
+    <EmbeddedResource Include="Data\map\COMMO-house.xml" />
+    <EmbeddedResource Include="Data\map\COMMO-spawn.xml" />
+    <EmbeddedResource Include="Data\map\COMMO.otbm" />
     <EmbeddedResource Include="Data\map\teste-house.xml" />
     <EmbeddedResource Include="Data\map\teste-spawn.xml" />
     <EmbeddedResource Include="Data\map\teste.otbm" />
