Implemented easier-on-the-eyes, framework-based, unsafe-code-free RSA Encryption.

--- a/src/COMMO.Communications/COMMO.Communications.csproj
+++ b/src/COMMO.Communications/COMMO.Communications.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <Platforms>x64</Platforms>
     <Configurations>Debug;Release</Configurations>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
