I guess we just can't use the framework's cryptography.

--- a/src/COMMO.Playground/COMMO.Playground.csproj
+++ b/src/COMMO.Playground/COMMO.Playground.csproj
@@ -7,4 +7,9 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\COMMO.Communications\COMMO.Communications.csproj" />
+    <ProjectReference Include="..\COMMO.Security\COMMO.Security.csproj" />
+  </ItemGroup>
+
 </Project>
