Addition of config.json file, inicial implementation of 1098 login protocol.

--- a/src/COMMO.Communications/COMMO.Communications.csproj
+++ b/src/COMMO.Communications/COMMO.Communications.csproj
@@ -6,6 +6,14 @@
     <Configurations>Debug;Release</Configurations>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <OutputPath>..\..\</OutputPath>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <OutputPath>..\..\</OutputPath>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\COMMO.Configuration\COMMO.Configuration.csproj" />
     <ProjectReference Include="..\COMMO.Data\COMMO.Data.csproj" />
