--- a/src/COMMO.Configuration/COMMO.Configuration.csproj
+++ b/src/COMMO.Configuration/COMMO.Configuration.csproj
@@ -6,6 +6,14 @@
     <Configurations>Debug;Release</Configurations>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <OutputPath>..\..\</OutputPath>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <OutputPath>..\..\</OutputPath>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\COMMO.Data.Contracts\COMMO.Data.Contracts.csproj" />
   </ItemGroup>
