--- a/src/COMMO.Data.Contracts/COMMO.Data.Contracts.csproj
+++ b/src/COMMO.Data.Contracts/COMMO.Data.Contracts.csproj
@@ -6,4 +6,12 @@
     <Configurations>Debug;Release</Configurations>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <OutputPath>..\..\</OutputPath>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <OutputPath>..\..\</OutputPath>
+  </PropertyGroup>
+
 </Project>
