--- a/src/COMMO.Security/COMMO.Security.csproj
+++ b/src/COMMO.Security/COMMO.Security.csproj
@@ -13,11 +13,13 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <OutputPath>..\..\</OutputPath>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <Optimize>true</Optimize>
+    <OutputPath>..\..\</OutputPath>
   </PropertyGroup>
 
 </Project>
