--- a/src/COMMO.Server.Data/COMMO.Server.Data.csproj
+++ b/src/COMMO.Server.Data/COMMO.Server.Data.csproj
@@ -8,10 +8,12 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <OutputPath>..\..\</OutputPath>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <OutputPath>..\..\</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
