--- a/src/COMMO.Server/COMMO.Server.csproj
+++ b/src/COMMO.Server/COMMO.Server.csproj
@@ -13,11 +13,12 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LangVersion>latest</LangVersion>
-    <OutputPath></OutputPath>
+    <OutputPath>..\..\</OutputPath>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LangVersion>latest</LangVersion>
+    <OutputPath>..\..\</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
@@ -31,6 +32,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="NLog" Version="4.5.6" />
     <PackageReference Include="StackExchange.Redis" Version="1.2.6" />
   </ItemGroup>
