--- a/src/COMMO.Server.Parsing/COMMO.Server.Parsing.csproj
+++ b/src/COMMO.Server.Parsing/COMMO.Server.Parsing.csproj
@@ -6,6 +6,14 @@
     <Configurations>Debug;Release</Configurations>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <OutputPath>..\..\</OutputPath>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <OutputPath>..\..\</OutputPath>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Sprache" Version="2.1.2" />
   </ItemGroup>
