--- a/src/COMMO.Server.Standalone/COMMO.Server.Standalone.csproj
+++ b/src/COMMO.Server.Standalone/COMMO.Server.Standalone.csproj
@@ -1,5 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.2</TargetFramework>
@@ -27,16 +28,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <BootStrapFiles Include="$(Temp)hostpolicy.dll;$(Temp)$(ProjectName).exe;$(Temp)hostfxr.dll;" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
   </ItemGroup>
-
-  <Target Name="GenerateNetcoreExe" AfterTargets="Build" Condition="'$(IsNestedBuild)' != 'true'">
-    <RemoveDir Directories="$(Temp)" />
-    <Exec ConsoleToMSBuild="true" Command="dotnet build $(ProjectPath) -r win-x64 /p:CopyLocalLockFileAssemblies=false;IsNestedBuild=true --output $(Temp)">
-      <Output TaskParameter="ConsoleOutput" PropertyName="OutputOfExec" />
-    </Exec>
-    <Copy SourceFiles="@(BootStrapFiles)" DestinationFolder="$(OutputPath)" />
-
-  </Target>
 
 </Project>
