--- a/src/COMMO.Utilities/COMMO.Utilities.csproj
+++ b/src/COMMO.Utilities/COMMO.Utilities.csproj
@@ -8,10 +8,12 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LangVersion>latest</LangVersion>
+    <OutputPath>..\..\</OutputPath>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LangVersion>latest</LangVersion>
+    <OutputPath>..\..\</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
